--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,7 @@ img {
 
 .line {
   width: auto;
-  border-bottom: 1px solid #ECECEC;
+  border-bottom: 1px solid #ececec;
 }
 
 .header-nav {
@@ -96,7 +96,7 @@ img {
   align-items: center;
 }
 
-.header-list-item {
+.header-list-item:not(:last-child) {
   margin-right: 50px;
 }
 
@@ -209,6 +209,7 @@ img {
   font-weight: 700;
   line-height: 16px;
   text-transform: uppercase;
+  margin-bottom: 10px;
 }
 
 .features-txt {
@@ -245,10 +246,10 @@ img {
 }
 
 .work-list-item:not(:last-child) {
-margin-right: 30px;
+  margin-right: 30px;
 }
 
-.our-team-title {
+.our-team {
   padding-top: 94px;
 }
 
@@ -265,13 +266,13 @@ margin-right: 30px;
 }
 
 .team-list-item:not(:last-child) {
-margin-right: 30px;
-
+  margin-right: 30px;
 }
 
 .team-mate {
-background-color: var(--txt-main-color);
-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  background-color: var(--txt-main-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
@@ -285,15 +286,17 @@ box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0p
 .position {
   text-align: center;
   color: var(--txt-secondary-color);
+  margin-bottom: 30px;
 }
 
 .portfolio {
   background-color: var(--txt-main-color);
+  padding-bottom: 94px;
 }
 
 .portfolio-container {
+  background-color: var(--txt-main-color);
   padding-top: 94px;
-  padding-bottom: 34px;
 }
 
 .filter-list {
@@ -304,6 +307,7 @@ box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0p
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  margin-bottom: 50px;
 }
 
 .filter-list-item:not(:last-child) {
@@ -323,6 +327,7 @@ box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0p
   vertical-align: top;
   letter-spacing: 3%;
   cursor: pointer;
+  padding: 6px 22px;
 }
 
 .filter-btn:hover,
@@ -330,12 +335,10 @@ box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0p
   background-color: var(--brand-color);
   color: var(--txt-main-color);
   /* shadow-middle */
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
   cursor: pointer;
-}
-
-.projects {
-  background-color: var(--txt-main-color);
-  padding-bottom: 94px;
 }
 
 .projects-list {
@@ -345,20 +348,22 @@ box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0p
   row-gap: 30px;
 }
 
-.projects-item-bottom  {
-  border-right: 1px solid #EEEEEE;
-  border-bottom: 1px solid #EEEEEE;
-  border-left: 1px solid #EEEEEE;
+.projects-item-bottom {
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+  padding-top: 20px;
 }
 
 .projects-title {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
-  letter-spacing: 0.06em;
+  letter-spacing: 0.03em;
   color: var(--txt-body-color);
-  padding-left: 24px;
-  padding-top: 20px;
+  margin-left: 24px;
+  margin-right: 24px;
+  margin-bottom: 4px;
 }
 
 .projects-category {
@@ -366,9 +371,9 @@ box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0p
   line-height: 1.88;
   letter-spacing: 0.03em;
   color: var(--txt-secondary-color);
-  padding-left: 24px;
-  padding-top: 4px;
-  padding-bottom: 20px;
+  margin-left: 24px;
+  margin-bottom: 20px;
+  margin-right: 24px;
 }
 
 .footer {
@@ -376,6 +381,8 @@ box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0p
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .footer-container {
@@ -391,16 +398,11 @@ box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0p
   line-height: 31px;
   letter-spacing: 0.03em;
   color: var(--brand-color);
-margin-top: 60px;
-margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .footer-logo-part2 {
   color: white;
-}
-
-.footer-address {
-  margin-bottom: 60px;
 }
 
 .footer-map {
